--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "多语言收集工具9.3",
+  "name": "multilanguage-collection-tool-9.3",
   "version": "0.9.3",
   "private": true,
   "main": "main.js",
@@ -17,16 +17,9 @@
     "@popperjs/core": "^2.11.6",
     "@types/node": "^18.13.0",
     "bootstrap": "^3.4.1",
-    "child_process": "^1.0.2",
     "comment-json": "^4.2.3",
     "del": "^6.0.0",
-    "electron-builder-squirrel-windows": "^25.0.0-alpha.6",
-    "electron-connect": "^0.6.3",
-    "electron-fetch": "^1.9.1",
-    "electron-renderer": "^2.0.4",
-    "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
-    "electron-wix-msi": "^5.0.0",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "glob": "^8.1.0",
@@ -57,9 +50,8 @@
     "@types/mocha": "^10.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "chai": "^4.3.7",
-    "electron": "^23.1.0",
+    "electron": "^32.0.1",
     "electron-builder": "^24.13.3",
-    "electron-reload": "^2.0.0-alpha.1",
     "mocha": "^10.2.0",
     "vite": "^4.0.0",
     "vite-plugin-electron-renderer": "^0.12.1"
@@ -105,5 +97,6 @@
         }
       ]
     }
-  }
+  },
+  "license": "ISC"
 }
