--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-﻿{"path":"","prefix":"LanUtils.getLanguage","excelPath":"C:\\Users\\admin\\AppData\\MetaApp\\Editor_Win64\\MetaWorldSaved\\Saved\\MetaWorld\\Project\\Edit\\jellyrun2\\jellyrun2\\Excel","languageExcelName":"Language.xlsx"}
+﻿{"path":"","prefix":"","excelPath":"C:\\Users\\admin\\AppData\\MetaApp\\Editor_Win64\\MetaWorldSaved\\Saved\\MetaWorld\\Project\\Edit\\jellyrun\\jellyrun\\Excel","languageExcelName":"Language.xlsx"}
