--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-﻿{"path":"","prefix":"","excelPath":"C:\\Users\\admin\\AppData\\MetaApp\\Editor_Win64\\MetaWorldSaved\\Saved\\MetaWorld\\Project\\Edit\\jellyrun\\jellyrun\\Excel","languageExcelName":"Language.xlsx"}
+﻿{"path":"D:\\cocosProject\\xb-client\\xibu3\\assets\\resources\\viewsNew","prefix":"LanUtils.getLanguage","excelPath":"","languageExcelName":"Language.xlsx"}
