--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "自动添加滚动框工具4.1",
-  "version": "0.4.1",
+  "name": "multilanguage-collection-tool-9.3",
+  "version": "0.9.3",
   "private": true,
   "main": "main.js",
   "author": "Peng Li",
-  "description": "自动添加滚动框工具4.1",
+  "description": "多语言收集工具9.3",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,18 +16,11 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@types/node": "^18.13.0",
+    "axios": "^1.7.9",
     "bootstrap": "^3.4.1",
-    "child_process": "^1.0.2",
     "comment-json": "^4.2.3",
-    "crypto": "^1.0.1",
     "del": "^6.0.0",
-    "electron-builder-squirrel-windows": "^25.0.0-alpha.6",
-    "electron-connect": "^0.6.3",
-    "electron-fetch": "^1.9.1",
-    "electron-renderer": "^2.0.4",
-    "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
-    "electron-wix-msi": "^5.0.0",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "glob": "^8.1.0",
@@ -58,9 +51,8 @@
     "@types/mocha": "^10.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "chai": "^4.3.7",
-    "electron": "^23.1.0",
+    "electron": "^33.2.0",
     "electron-builder": "^24.13.3",
-    "electron-reload": "^2.0.0-alpha.1",
     "mocha": "^10.2.0",
     "vite": "^4.0.0",
     "vite-plugin-electron-renderer": "^0.12.1"
@@ -106,5 +98,6 @@
         }
       ]
     }
-  }
+  },
+  "license": "ISC"
 }
